[package]
name = "bongodb"
version = "0.1.0"
authors = ["Bob Chen <chenbobby168@gmail.com>"]
edition = "2018"

[lib]
name = "bongodb"
path = "src/lib.rs"

[[bin]]
name = "bongodb-server"
path = "src/bin/server.rs"

[[bin]]
name = "bongodb-client"
path = "src/bin/client.rs"

[dependencies]
libc = "0.2.73"
